objects/Enrollment_Recycle_Archive__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <label>Contracts</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Number</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Indicator__c</fullName>
        <label>New Business Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processed_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processed Type</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When TRUE the record was processed by the Enrollment Recycle Process Successfully.  When FALSE the record was not processed but instead it was moved to the Enrollment_Recycle_Archive__c object by a monthly job that must run prior to the next month's enrollment import process.</description>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_State__c</fullName>
        <label>Rating State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_dt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rpt dt</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Dt__c</fullName>
        <description>Date that the import file was created</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Dt</label>
        <length>23</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC Product</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <description>Used to store the enrollment_recycle__c records that are processed when the user recycles successfully.  

In addition, this object stores enrollment_recycle__c records that are not processed by the users.  In this instances a monthly clean up job is used to move the records off the enrollment_recycle__c object to this object.  The Processed__c field is set to fails in this instance.</description>
    <label>Enrollment Recycle Archive</label>
    <nameField>
        <displayFormat>ERA-{00000}</displayFormat>
        <label>Error Recycle Archive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Recycle Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Name__c</columns>
        <columns>Error_Message__c</columns>
        <columns>System__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>Processed_Type__c</columns>
        <columns>Risk__c</columns>
        <columns>Rpt_dt__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Error_Number__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Archived_Today</fullName>
        <columns>NAME</columns>
        <columns>Processed__c</columns>
        <columns>Account_Name__c</columns>
        <columns>System__c</columns>
        <columns>Account_Number__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Rpt_dt__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Archived Today</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>By_Rpt_dt</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>System__c</columns>
        <columns>Account_Number__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>Rpt_dt__c</columns>
        <columns>Processed__c</columns>
        <columns>Run_Dt__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rpt_dt__c</field>
            <operation>equals</operation>
            <value>201401</value>
        </filters>
        <label>By Rpt_dt</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Large_Group</fullName>
        <columns>Account_Name__c</columns>
        <columns>Error_Message__c</columns>
        <columns>System__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>Processed_Type__c</columns>
        <columns>Risk__c</columns>
        <columns>Rpt_dt__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Error_Number__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rpt_dt__c</field>
            <operation>greaterThan</operation>
            <value>201810</value>
        </filters>
        <filters>
            <field>System__c</field>
            <operation>contains</operation>
            <value>nasco</value>
        </filters>
        <label>Large Group</label>
    </listViews>
    <listViews>
        <fullName>Not_Processed</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>System__c</columns>
        <columns>Account_Number__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Rpt_dt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Processed</label>
    </listViews>
</CustomObject>